--- a/.github/workflow/continous_delivery.yml
+++ b/.github/workflow/continous_delivery.yml
@@ -1,3 +1,4 @@
+name: Node Project  CI on ECR
 
 on:
   push:
@@ -8,8 +9,6 @@ on:
     branches:
       - main
       - develop
-
-name: Node Project `my-app` CI on ECR
 
 jobs:
   deploy:
